<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_home" android:icon="@drawable/ic_action_home_light"
            android:title="@string/section1" />
        <item android:id="@+id/nav_new_route" android:icon="@drawable/ic_action_map_light"
            android:title="@string/section2" />
        <item android:id="@+id/nav_routes" android:icon="@drawable/ic_action_bus_routes_light"
            android:title="@string/section3" />
        <item android:id="@+id/nav_schedules" android:icon="@drawable/ic_action_schedules_light"
            android:title="@string/section4" />
        <item android:id="@+id/nav_bus_refresh" android:icon="@drawable/ic_action_refresh_lines_light"
            android:title="@string/section5" />
        <item android:id="@+id/nav_about" android:icon="@drawable/ic_action_about_light"
            android:title="@string/section6" />
        <item android:id="@+id/nav_exit" android:icon="@drawable/ic_action_exit_light"
            android:title="@string/section7" />
    </group>



</menu>