<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jmartinal.madridbusgps">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusableInTouchMode="true">

            <LinearLayout
                android:id="@+id/linearLayoutHowto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">

                <!--<TextView-->
                    <!--android:id="@+id/textView"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_alignParentBottom="true"-->
                    <!--android:layout_alignParentEnd="true"-->
                    <!--android:layout_alignParentRight="true"-->
                    <!--android:layout_gravity="bottom"-->
                    <!--android:text="@string/route_how_to"-->
                    <!--android:textAppearance="?android:attr/textAppearanceSmall"-->
                    <!--android:paddingBottom="@dimen/activity_vertical_margin"-->
                    <!--android:singleLine="false" />-->

            </LinearLayout>

            <TextView
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/tv_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/route_from"
                android:layout_below="@+id/linearLayoutHowto" />

            <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/fl_from"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_from">

                <com.jmartinal.madridbusgps.Utils.DelayAutoCompleteTextView
                    android:id="@+id/et_from"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@android:drawable/ic_menu_search"
                    android:hint="@string/route_address_example"
                    android:imeOptions="flagNoExtractUi|actionSearch"
                    android:inputType="textCapSentences" />

                <ProgressBar
                    android:id="@+id/pb_loading_indicator_from"
                    style="?android:attr/progressBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|right"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:visibility="gone" />

            </FrameLayout>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/newRouteGPSFab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:layout_below="@+id/fl_from"
                android:layout_centerHorizontal="true"
                android:scaleType="center"
                android:src="@drawable/ic_action_use_gps_dark"
                android:text="@string/route_find_gps"/>

            <TextView
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/tv_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/newRouteGPSFab"
                android:text="@string/route_to" />

            <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/fl_to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_to">

                <com.jmartinal.madridbusgps.Utils.DelayAutoCompleteTextView
                    android:id="@+id/et_to"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@android:drawable/ic_menu_search"
                    android:hint="@string/route_address_example"
                    android:imeOptions="flagNoExtractUi|actionSearch"
                    android:inputType="textCapSentences" />

                <ProgressBar
                    android:id="@+id/pb_loading_indicator_to"
                    style="?android:attr/progressBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|right"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:visibility="gone" />

            </FrameLayout>

            <TextView
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/tv_options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fl_to"
                android:text="@string/route_options" />
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_options"
                android:id="@+id/radioGroup">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioShortest"
                    android:text="@string/new_route_shortest"
                    android:checked="true"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioLessStops"
                    android:text="@string/new_route_less_stops"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioLessTransfers"
                    android:text="@string/new_route_less_transfers"/>
            </RadioGroup>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_route_night_lines"
                android:id="@+id/nightLinesCheckbox"
                android:layout_below="@+id/radioGroup"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/newRouteFab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_gravity="center_horizontal"
                android:layout_below="@+id/nightLinesCheckbox"
                android:layout_centerHorizontal="true"
                android:scaleType="center"
                android:src="@drawable/ic_action_map_dark"
                android:text="@string/route_new"/>



        </RelativeLayout>

    </ScrollView>




</RelativeLayout>
