<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.jmartinal.madridbusgps.Fragments.BusLinesRefreshFragment"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/last_refresh_date"
        android:id="@+id/lastRefreshDateLabel"
        android:layout_gravity="top|left" />

    <DatePicker
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/lastRefreshDate"
        android:layout_gravity="center_horizontal|top"
        android:calendarViewShown="false" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:textColor="@android:color/holo_red_light"
        android:text="@string/loading_bus_error_message"
        android:id="@+id/lastRefreshError" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/refreshBusLinesFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_action_refresh_lines_dark"
        android:scaleType="center"
        android:text="@string/refresh"
        android:layout_margin="@dimen/fab_margin"/>

</LinearLayout>
