<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.jmartinal.madridbusgps.Fragments.BusSchedulesFragment">

        <TextView
            android:id="@+id/busScheduleLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bus_schedule_line_label"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <AutoCompleteTextView
            android:id="@+id/busScheduleAutocomplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@android:drawable/ic_menu_search"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:inputType="textCapSentences" />

        <TextView
            android:id="@+id/dateScheduleLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bus_schedule_date_label"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <DatePicker
            android:id="@+id/busScheduleDatePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:calendarViewShown="false"
            android:clickable="false"
            android:datePickerMode="spinner" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/busScheduleFab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:scaleType="center"
            android:src="@drawable/ic_action_search_dark"
            android:text="@string/bus_schedule_search"
            android:clickable="false" />

    </LinearLayout>
</ScrollView>